package com.stockpro.purchase.client;

import com.stockpro.purchase.dto.external.ProductResponse;
import com.stockpro.purchase.response.ApiResponse;
import org.springframework.cloud.openfeign.FeignClient;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.PathVariable;

@FeignClient(name = "product-service", path = "/api/v1/products")
public interface ProductClient {

    @GetMapping("/{id}")
    ApiResponse<ProductResponse> getById(@PathVariable("id") Long id);
}
